New UC Post-Election Trees, Militias, and Light and Elite Infantry

--- a/localisation/PB_United_Commonwealth_l_english.yml
+++ b/localisation/PB_United_Commonwealth_l_english.yml
@@ -107,93 +107,112 @@ AME_the_election_draws_near:0 "The 1935 Election"
 AME_the_election_draws_near_desc:0 ""
 
 
-AME_the_lang_administration:0 "The Lang Administration"
+AME_the_lang_administration:0 "Lang in Charge"
 AME_the_lang_administration_desc:0 ""
-AME_expand_union_power:0 "Expand Union Power"
-AME_expand_union_power_desc:0 ""
-AME_fight_segregation_head_on:0 "Fight Segregation Head-on"
-AME_fight_segregation_head_on_desc:0 ""
-AME_rights_to_the_workers:0 "Rights for the Workers"
-AME_rights_to_the_workers_desc:0 ""
-AME_further_expand_the_ova:0 "Further Expand the O.V.A."
-AME_further_expand_the_ova_desc:0 ""
-AME_crack_down_on_southern_lawmakers:0 "Crackdown on Southern Lawmakers"
-AME_crack_down_on_southern_lawmakers_desc:0 ""
-AME_dismantle_the_institution:0 "Dismantle the Institution"
-AME_dismantle_the_institution_desc:0 ""
+AME_protecting_mothers:0 "Protecting Mothers"
+AME_protecting_mothers_desc:0 ""
+AME_protecting_workers:0 "Protecting Workers"
+AME_protecting_workers_desc:0 ""
+AME_give_the_working_class_a_chance:0 "Give the Working Class a Chance"
+AME_give_the_working_class_a_chance_desc:0 ""
+AME_bringing_suffrage_for_all:0 "Bringing Suffrange for All"
+AME_bringing_suffrage_for_all_desc:0 ""
+AME_women_deserve_a_voice:0 "Women Deserve a Voice!"
+AME_women_deserve_a_voice_desc:0 ""
+AME_fighting_for_all_men:0 "Fighting for All Men"
+AME_fighting_for_all_men_desc:0 ""
+AME_connecting_the_nation:0 "Connecting the Nation"
+AME_connecting_the_nation_desc:0 ""
+AME_the_northern_development_plan:0 "The Northern Development Plan"
+AME_the_northern_development_plan_desc:0 ""
+AME_the_central_development_plan:0 "The Central Development Plan"
+AME_the_central_development_plan_desc:0 ""
+AME_the_southern_development_plan:0 "The Southern Development Plan"
+AME_the_southern_development_plan_desc:0 ""
+AME_developing_our_industry:0 "New England Industrial Grants"
+AME_developing_our_industry_desc:0 ""
+AME_the_southern_industrialization_program:0 "The Southern Industrialization Program"
+AME_the_southern_industrialization_program_desc:0 ""
+AME_fighting_big_business:0 "Fighting Big Business"
+AME_fighting_big_business_desc:0 ""
+AME_giving_unions_power:0 "Giving Unions Power"
+AME_giving_unions_power_desc:0 ""
 AME_the_american_bismarck:0 "The American Bismarck"
 AME_the_american_bismarck_desc:0 ""
-AME_pass_a_constitutional_amendment:0 "Pass a Constitutional Amendment"
-AME_pass_a_constitutional_amendment_desc:0 ""
-AME_deal_with_southern_resistance:0 "Deal with Southern Resistance"
-AME_deal_with_southern_resistance_desc:0 ""
-AME_a_solution_long_overdue:0 "A Solution Long Overdue"
-AME_a_solution_long_overdue_desc:0 ""
+AME_the_red_rose_of_the_continent:0 "The Red Rose of the Continent"
+AME_the_red_rose_of_the_continent_desc:0 ""
 
-AME_the_curtin_administration:0 "The Curtin Administration"
+AME_the_curtin_administration:0 "Curtin Takes the Reigns"
 AME_the_curtin_administration_desc:0 ""
-AME_push_a_progressive_economy:0 "Push for a Progressive Economy"
-AME_push_a_progressive_economy_desc:0 ""
-AME_sway_the_mover_industry:0 "Sway the Mover Industry"
-AME_sway_the_mover_industry_desc:0 ""
-AME_anti_segregationist_films:0 "Anti-Segregationist Films"
-AME_anti_segregationist_films_desc:0 ""
-AME_fund_pro_imperial_films:0 "Support Pro-Empire Films"
-AME_fund_pro_imperial_films_desc:0 ""
-AME_progressive_policies_to_match:0 "Progressive Policies to Match"
-AME_progressive_policies_to_match_desc:0 ""
-AME_negotiate_with_southern_lawmakers:0 "Negotiate with Southern Lawmakers"
-AME_negotiate_with_southern_lawmakers_desc:0 ""
-AME_gradual_desegregation_plans:0 "Gradual Desegregation Plans"
-AME_gradual_desegregation_plans_desc:0 ""
-AME_not_yet_the_citadel_of_civilization:0 "Not yet the Citadel of Civilization"
-AME_not_yet_the_citadel_of_civilization_desc:0 ""
-AME_grant_token_concessions_to_unions:0 "Grant Token Concessions to Unions"
-AME_grant_token_concessions_to_unions_desc:0 ""
-AME_mixed_market_policies:0 "Mixed Market Policies"
-AME_mixed_market_policies_desc:0 ""
-AME_increase_our_exports:0 "Increase our Exports"
-AME_increase_our_exports_desc:0 ""
-AME_dominate_the_continent:0 "Dominate the Continent"
-AME_dominate_the_continent_desc:0 ""
-AME_imperial_powerhouse:0 "The Imperial Powerhouse"
-AME_imperial_powerhouse_desc:0 ""
+AME_our_first_steps:0 "Our First Steps"
+AME_our_first_steps_desc:0 ""
+AME_protecting_widows:0 "Protecting Widows"
+AME_protecting_widows_desc:0 ""
+AME_lending_the_worker_a_hand:0 "Lending the Worker a Hand"
+AME_lending_the_worker_a_hand_desc:0 ""
+AME_fighting_economic_inequality:0 "Fighting Economic Inequality"
+AME_fighting_economic_inequality_desc:0 ""
+AME_a_party_to_build_the_commonwealth:0 "A Party to Build the Commonwealth"
+AME_a_party_to_build_the_commonwealth_desc:0 ""
+AME_building_a_greater_state:0 "Building a Greater State"
+AME_building_a_greater_state_desc:0 ""
+AME_improving_tribal_relations:0 "Improving Tribal Relations"
+AME_improving_tribal_relations_desc:0 ""
+AME_apologizing_for_previous_actions:0 "Apologize for Previous Actions"
+AME_apologizing_for_previous_actions_desc:0 ""
+AME_assisting_tribal_leaders:0 "Assisting Tribal Leaders"
+AME_assisting_tribal_leaders_desc:0 ""
+AME_native_land_grants:0 "Native Land Grants"
+AME_native_land_grants_desc:0 ""
+AME_helping_freedmen:0 "Helping Freedmen"
+AME_helping_freedmen_desc:0 ""
+AME_persuading_southern_politicians:0 "Persuading Southern Politicians"
+AME_persuading_southern_politicians_desc:0 ""
+AME_fighting_racial_inequality:0 "Fighting Racial Inequality"
+AME_fighting_racial_inequality_desc:0 ""
+AME_a_party_for_all_the_commonwealth:0 "A Party for all the Commonwealth"
+AME_a_party_for_all_the_commonwealth_desc:0 ""
+AME_bringing_the_south_into_modernity:0 "Bringing the South into Modernity"
+AME_bringing_the_south_into_modernity_desc:0 ""
+AME_the_citadel_of_civilization:0 "The Citadel of Civilization"
+AME_the_citadel_of_civilization_desc:0 ""
 
 AME_davis_holds_on:0 "Davis Holds On"
 AME_davis_holds_on_desc:0 ""
-AME_steady_as_she_goes:0 "Steady as She Goes"
-AME_steady_as_she_goes_desc:0 ""
-AME_placate_southern_segregationists:0 "Placate Southern Segregationists"
-AME_placate_southern_segregationists_desc:0 ""
-AME_placate_radical_abolitionists:0 "Placate Radical Abolitionists"
-AME_placate_radical_abolitionists_desc:0 ""
-AME_a_problem_for_the_future:0 "A Problem for the Future"
-AME_a_problem_for_the_future_desc:0 ""
-AME_more_than_just_empty_promises:0 "More than just Empty Promises"
-AME_more_than_just_empty_promises_desc:0 ""
-AME_the_year_gag_law:0 "The [GetYear] Gag Law"
-AME_the_year_gag_law_desc:0 ""
-AME_pass_token_legislation:0 "Pass Token Legislation"
-AME_pass_token_legislation_desc:0 ""
-AME_matters_of_the_economy:0 "Matters of the Economy"
-AME_matters_of_the_economy_desc:0 ""
-AME_further_relief_from_the_crisis:0 "Further Relief from the Crisis"
-AME_further_relief_from_the_crisis_desc:0 ""
-AME_stop_further_relief_efforts:0 "Stop Further Relief Efforts"
-AME_stop_further_relief_efforts_desc:0 ""
-AME_lessons_from_london:0 "Lessons from London"
-AME_lessons_from_london_desc:0 ""
-AME_double_down_on_our_duties:0 "Double Down on our Duties"
-AME_double_down_on_our_duties_desc:0 ""
-AME_promote_the_self_sufficient_model:0 "Promote the Self-Sufficient Model"
-AME_promote_the_self_sufficient_model_desc:0 ""
-AME_expand_our_military_industry:0 "Expand our Military Industry"
-AME_expand_our_military_industry_desc:0 ""
-AME_the_army_prevails:0 "The Army Prevails"
-AME_the_army_prevails_desc:0 ""
-AME_the_navy_pulls_through:0 "The Navy Pulls Through"
-AME_the_navy_pulls_through_desc:0 ""
-
+AME_defending_southern_traditions:0 "Defending Southern Traditions"
+AME_defending_southern_traditions_desc:0 ""
+AME_defending_the_free_market:0 "Defending the Free Market"
+AME_defending_the_free_market_desc:0 ""
+AME_a_friend_of_london:0 "A Friend of London"
+AME_a_friend_of_london_desc:0 ""
+AME_the_western_traitors:0 "The Western Traitors"
+AME_the_western_traitors_desc:0 ""
+AME_the_arsenal_of_democracy:0 "The Arsenal of Democracy"
+AME_the_arsenal_of_democracy_desc:0 ""
+AME_token_support_of_democracy:0 "Token Support of Democracy"
+AME_token_support_of_democracy_desc:0 ""
+AME_arming_the_natives:0 "Arming the Natives"
+AME_arming_the_natives_desc:0 ""
+AME_assisting_corporate_interests:0 "Assisting Corporate Interests"
+AME_assisting_corporate_interests_desc:0 ""
+AME_corporations_shall_build_our_nations:0 "Corporations Shall Build our Nation"
+AME_corporations_shall_build_our_nations_desc:0 ""
+AME_using_corporate_support:0 "Using Corporate Support"
+AME_using_corporate_support_desc:0 ""
+AME_dealing_with_our_racial_issues:0 "Dealing with our Racial Issues"
+AME_dealing_with_our_racial_issues_desc:0 ""
+AME_taking_the_southern_stance:0 "Taking the Southern Stance"
+AME_taking_the_southern_stance_desc:0 ""
+AME_taking_a_balanced_approach:0 "Taking a Balanced Approach"
+AME_taking_a_balanced_approach_desc:0 ""
+AME_cementing_our_decision:0 "Cementing our Decision"
+AME_cementing_our_decision_desc:0 ""
+AME_corporate_propaganda:0 "Corporate Propaganda"
+AME_corporate_propaganda_desc:0 ""
+AME_the_free_market_solves_all_issues:0 "The Free Market Solves All Issues"
+AME_the_free_market_solves_all_issues_desc:0 ""
+AME_tradition_preserved:0 "Tradition Preserved"
+AME_tradition_preserved_desc:0 ""
 
 
 AME_the_aberhart_administration:0 "The Aberhart Administration"
@@ -209,3 +228,64 @@ AME_the_aberhard_administration_desc:0 ""
 ##########################
 # PUPPET AUTONOMY
 ##########################
+
+##########################
+# BLEEDING SOUTH - Made In China ( Jk Made By G_O_D )
+##########################
+
+# Decisions
+PB_AME_The_Bleeding_South:0 "The Bleeding South"
+PB_AME_The_Bleeding_South_desc:0 "Racial tensions in the Southern states have always been uneasy. Creating not only a physcial divide between north and south but a political one as well with the North seen as a bastion of democracy, freedom, and progress. The South in their eyes as a rural backwater with rather outdated and barbaric traditions and customs. This rivalry has eventually reached its boiling point and there is now word of a southern uprising.\n\n§RWe have limited time to prepare for whats coming§!"
+AME_Test:0 "CLICK THIS TO ENABLE THE BLEEDING SOUTH"
+AME_Southern_Rebellion:0 "Southern Rebellion"
+AME_Southern_Rebellion_desc:0 "For far too long we have been ignored by the suits in Philadelphia. They openly spit on our faces and insult us whenver they very damn well please but we have had enough of it. No longer will our traditions, morals, and beliefs be hampered on by an administration so folly. So I call you brothers, rise, rise, rise up into Dixie Land!\n\n§RAnd End This Charade Once And For All!§!"
+AME_Civil_Unrest:0 "Civil Unrest"
+AME_Civil_Unrest_desc:0 "It is only time until we see the south proclaim independence but while the clock ticks down we have other pressing matters to attend to. Riots, corruption, and racial tensions are all being birthed in this moment of strife. We must, at the very least, attempt to control the situation else face intervention from our fathers in Britain."
+
+# Ideas
+PB_AME_Dixie_Rebellion:0 "The Dixie Uprising"
+PB_FSA_No_Or_Never:0 "Now Or Never"
+
+# Country Flags
+Bleeding_South_Disabled:0 "The Bleeding South Is Not Active"
+Bleeding_South_Enabled:0 "The Bleeding South Is Active
+
+# Tooltips
+Bleeding_South1tooltip:0 "God Help Us All"
+Bleeding_South2tooltip:0 "§RAfter 15 days the United Commenwealth might just become a little less civilized§!"
+Bleeding_South3tooltip:0 "§YYou will tag switch to the FSA (Free States Alliance)§!"
+
+# Events
+Bleeding_South1title:0 "Violent Riots"
+Bleeding_South1desc:0 "The officer's pristine blue uniform aided little in the ensuing battle for the city roads, a war undeclared but very much active between the local authorities and white civilain population. Racial slurs rant rampant and armed showdowns occured in approximately five minute intervals. The south at this moment turned into a cesspool of degeneracy as frequent confrontations between other races, mainly between black and white, turned violent. Though as the night quietened so did the riots. But a new day would bring new "festivities"." 
+Bleeding_South1opta:0 "Can Everyone Just Calm Down?"
+
+Bleeding_South2title:0 "Racial Street Brawl"
+Bleeding_South2desc:0 "A lone laundromat located in a predominantly white suburb laid victim to a bloody beating today. Local reports state that a young Africian-American entered the laundromat to do business when a gang of masked individuals, assumed to be stalking the boy, jumped him and draged him into the middle of the road, where they, Quote on quote. "Beat the fucking shit out of him". Said by locals present at the time. Apparently a few minutes later the beating turned into an ugly confrontation between the black and white local populations and a street brawl followed suite.\n\nThe young boy is now dead as a result of the beating." 
+Bleeding_South2opta:0 "Can Everyone Just Calm Down?"
+
+Bleeding_South3title:0 "Talks Of Corruption"
+Bleeding_South3desc:0 "Rumours have spread that local officials are accepting large amounts of money to turn a blind eye in regards to southern mobilization and the raising of state funded militias. We have little power to intervene and doing so would likely on escalate the situation so as it stands the south only gets stronger.\n\nAnd more corrupt. " 
+Bleeding_South3opta:0 "Can Everyone Just Calm Down?"
+
+Bleeding_South4title:0 "Weapons Depot Raided"
+Bleeding_South4desc:0 "A local garrison has just responded to the head of military affairs stating that a raid from a rag-tag militia group has just occured. Overwhelmed the garrison is said to have given up arms with little resistance. In fact it is said a large proportion of soliders defected to the militias cause.\n\nNow they grow stronger in size." 
+Bleeding_South4opta:0 "Can Everyone Just Calm Down?"
+
+Bleeding_South5title:0 "The Dixie Uprising"
+Bleeding_South5desc:0 "The garrison in Savannah stopped responding at 09:00 today. The most recent broadcast from yesterday spoke of rising unrest and the near collapse of the authoritie's hold on the city, stating that unless Northern aid arrives the garrison will likely defect to the SFA (Free States Alliance). The SFA remains the largest political body against northern rule in the south. Lead by southern landowners it is likely the worst has just begun and will only continue from this point on. Our military have already responded by mobilizing in preparation for the inevitable civil war as gunshots can already be heard in most major Southern cities. " 
+Bleeding_South5opta:0 "May The Greatest Americans Win"
+Bleeding_South5optb:0 "I Wish I Was In The Land Of Cotton"
+
+Bleeding_South6title:0 "Issues In The United Commonwealth"
+Bleeding_South6desc:0 "The United Commonwealth administration has just sent an urgent report based on a supposed Southern rebellion. While only received minutes ago our suspicions are being confirmed by the minute. The UC will have some explaining to do but for the time being we must aid them in their war against the Free States Alliance.\n\n It is a true shame that British boys will be sent to die in a foreign land." 
+Bleeding_South6opta:0 "Muster An Expeditionary Force"
+
+Bleeding_South7title:0 "The South Is Tamed"
+Bleeding_South7desc:0 "Once again our troops march across the southern lands in the name of freedom. Once again so many die to the hands of brothers. And once again we are divided. A recurring curse placed onto us by God it seems. One that will never end and is doomed to repeat itself until one brother can finally create a wound so damaging that healing will take a millennium.\n\nAnd even then I doubt we will be united. " 
+Bleeding_South7opta:0 "Lets Hope That Never Happens Again"
+
+Bleeding_South8title:0 "The Sins Of Our Fathers"
+Bleeding_South8desc:0 "We have failed to contain the Southern threat and as a result we are forced to reconcile with these backwards barbarians, traitors, and infidels. As it stands the scoreboard reads "One to One" but there is always time for another game.\n\nAnother victory." 
+Bleeding_South8opta:0 "I Wish I Was Dixie"
+
