Some SCA stuff and unit GFX

--- a/localisation/PB_SCA_l_english.yml
+++ b/localisation/PB_SCA_l_english.yml
@@ -304,11 +304,15 @@
   SCA11tooltip:0 "\n§Y£decision_icon_small  Decisions unique to Oliver will become available after the Mid-Western Union is proclaimed.§!"
   SCA12tooltip:0 "\n§Y£decision_icon_small  Decisions unique to Butler will become available after the Mid-Western Union is proclaimed.§!"
   SCA13tooltip:0 "\n§Y£decision_icon_small  Decisions unique to Garden will become available after the Mid-Western Union is proclaimed.§!"
+  SCA14tooltip:0 "Sets the scenario up for the Mid-Western Union. This is for testing purposes so some shit might break or not work. Especially focuses that need flag."
 
   All_Thats_Left:0 "The Last Wave Has Arrived"
   SCA_LAK_WAR_OVER:0 "The Northern Threat Has Been Dealt With"
   SCA_Militia_Disloved:0 "The Militias Have Been Disloved"
   SCA_Militia_Lowered:0 "The Power Of The Militias Has Been Lowered"
+  PB_SCA_Peoples_Vanguard:0 "Has Picked The People's Vanguard"
+  PB_SCA_Young_Continental_Army:0 "Has Picked The Young Continental Army"
+  PB_SCA_Federative_Union:0 "Has Picked The Federative Union"
 
   PB_Mid_Western_Union:0 "Mid-Western Union"
 
