New Russian Parties and Percentages

--- a/localisation/PB_Parties_l_english.yml
+++ b/localisation/PB_Parties_l_english.yml
@@ -214,22 +214,22 @@
   FRA_ni_party:0 "FPF"
   FRA_ni_party_long:0 "Front Populaire Français"
 
-  RUS_jc_party:0 "YD"
-  RUS_jc_party_long:0 "Yakobinisticheskaya Dvizheniya"
-  RUS_ss_party:0 "SP"
-  RUS_ss_party_long:0 "Socialdemokraticheskaya Partiya"
-  RUS_lb_party:0 "Trudoviks"
-  RUS_lb_party_long:0 "Trudoviks"
-  RUS_cn_party:0 "Kadets"
-  RUS_cn_party_long:0 "Kadets"
-  RUS_rc_party:0 "RA"
-  RUS_rc_party_long:0 "Russkaya Assambleya"
-  RUS_an_party:0 "Kadets - L"
-  RUS_an_party_long:0 "Kadets - Liberal Faction"
-  RUS_ds_party:0 "BG"
-  RUS_ds_party_long:0 "Belaya Gvardiya"
-  RUS_ni_party:0 "Bratstvo"
-  RUS_ni_party_long:0 "Bratstvo"
+  RUS_jc_party:0 "OT"
+  RUS_jc_party_long:0 "Osvobozhdeniye Truda"
+  RUS_ss_party:0 "CZ"
+  RUS_ss_party_long:0 "Chornoe Znamia"
+  RUS_lb_party:0 "K (L)"
+  RUS_lb_party_long:0 "Kadets (L)"
+  RUS_cn_party:0 "K (R)"
+  RUS_cn_party_long:0 "Kadets (R)"
+  RUS_rc_party:0 "OD"
+  RUS_rc_party_long:0 "Ob'yedinennoye Dvoryanstvo"
+  RUS_an_party:0 "VSP"
+  RUS_an_party_long:0 "Vserossiyskiy Soyuz Pomeshchikov"
+  RUS_ds_party:0 "RMS"
+  RUS_ds_party_long:0 "Russkiy Monarkhicheskiy Soyuz"
+  RUS_ni_party:0 "SRN"
+  RUS_ni_party_long:0 "Soyuz Russkogo Naroda"
 
   CHI_jc_party:0 "FRP"
   CHI_jc_party_long:0 "Free Revolutionary Party"
