Fixing Missing Loc

--- a/localisation/unit_l_english.yml
+++ b/localisation/unit_l_english.yml
@@ -119,7 +119,16 @@
  TASK_FORCE_HAS_FUEL_INEFFICIENT_SHIP_FOR_MISSION:0 "£mapicon_unit_invalid_orders  The following ship classes are not fuel efficient for the mission $MISSION|H$"
  SPECIFIC_NAVY_CONTAINS_PRIDE_OF_FLEET:0 "$NAVY_NAME|H$ contains §HPride of the Fleet§! §H($NAME$)§!"
  DISBAND_PRIDE_OF_THE_FLEET_COST:1 "Disbanding your §HPride of the Fleet§! §H($NAME$)§! will cost $COST|R$ £pol_power "
- 
+ TRANSPORT_WEIGHT_VAL:0 "$VAL$"
+ TRANSPORT_WEIGHT_DESC:0 "Total weight of divisions"
+ CLICK_TO_ASSIGN_COMMANDER:0 "§GClick to assign a commander.§!"
+ UNIT_STATS_STATS_TAB:0 "Stats"
+ UNIT_STATS_TEMPLATE_TAB:0 "Template"
+ UNIT_LEADER_TRAITS:1 "Details"
+ UNIT_LEADER_PROMOTE:0 "Promote"
+ UNIT_LEADER_PROMOTE_WITH_COST:0 "Promote £command_power $CP|2R$"
+ UNIT_LEADER_PROMOTE_BLOCKED:0 "Unable to promote."
+ UNIT_LEADER_PROMOTE_NEED_CP:0 "Need $CP|2R$ more CP."
  SET_SHIP_PRIDE_OF_FLEET:0 "§HAssign§! $NAME|H$ as §HPride of the Fleet§!"
  REPLACE_SHIP_PRIDE_OF_FLEET:0 "§RReassign§! $NAME|H$ as current §HPride of the Fleet§!"
  SET_SHIP_PRIDE_OF_FLEET_DESC:0 "You will receive following bonuses:\n$BONUS$\n\n"
