Social Development system functional

--- a/localisation/PB_Government_l_english.yml
+++ b/localisation/PB_Government_l_english.yml
@@ -186,6 +186,52 @@ PB_Semi_Modern_Military:0 "Semi Modernized Military"
 PB_Great_War_Military:0 "Great War Era Military"
 PB_Pre_Great_War_Army:0 "Pre Great War Military"
 
+SocDev_Menu_Explanation:0 "§YSocial Development§! is a rough metric of various factors in a country.\n\nDecisions made throughout the campaign will §Gpositively§! or §Rnegatively§! affect the rate at which social progress is made. Development can top off at either 100% or -100%. If a development level is not already at maximum, it will increase to the next development level. If a development level reaches -100%, it will regress to the previous level unless at the lowest possible level."
+
+PB_Poverty_Small_Progress_tt:0 "Our current §YPoverty Rate§! will begin to §Gimprove§! by a small amount"
+PB_Poverty_Moderate_Progress_tt:0 "Our current §YPoverty Rate§! will begin to §Gimprove§! by a moderate amount"
+PB_Poverty_High_Progress_tt:0 "Our current §YPoverty Rate§! will begin to §Gimprove§! by a large amount"
+
+PB_Poverty_Small_Regress_tt:0 "Our current §YPoverty Rate§! will begin to §Rworsen§! by a small amount"
+PB_Poverty_Mod_Regress_tt:0 "Our current §YPoverty Rate§! will begin to §Rworsen§! by a moderate amount"
+PB_Poverty_High_Regress_Increase:0 "Our current §YPoverty Rate§! will begin to §Rworsen§! by a large amount"
+
+PB_Industry_Small_Progress_tt:0 "Our current §YIndustrialization§! will begin to §Gimprove§! by a small amount"
+PB_Industry_Moderate_Progress_tt:0 "Our current §YIndustrialization§! will begin to §Gimprove§! by a moderate amount"
+PB_Industry_High_Progress_tt:0 "Our current §YIndustrialization§! will begin to §Gimprove§! by a large amount"
+
+PB_Industry_Small_Regress_tt:0 "Our current §YIndustrialization§! will begin to §Rworsen§! by a small amount"
+PB_Industry_Moderate_Regress_tt:0 "Our current §YIndustrialization§! will begin to §Rworsen§! by a moderate amount"
+PB_Industry_High_Regress_tt:0 "Our current §YIndustrialization§! will begin to §Rworsen§! by a large amount"
+
+PB_Literacy_Small_Progress_tt:0 "Our current §YLiteracy Level§! will begin to §Gimprove§! by a small amount"
+PB_Literacy_Moderate_Progress_tt:0 "Our current §YLiteracy Level§! will begin to §Gimprove§! by a moderate amount"
+PB_Literacy_High_Progress_tt:0 "Our current §YLiteracy Level§! will begin to §Gimprove§! by a large amount"
+
+PB_Literacy_Small_Regression_tt:0 "Our current §YLiteracy Level§! will begin to §Rworsen§! by a small amount"
+PB_Literacy_Moderate_Regression_tt:0 "Our current §YLiteracy Level§! will begin to §Rworsen§! by a moderate amount"
+PB_Literacy_High_Regression_tt:0 "Our current §YLiteracy Level§! will begin to §Rworsen§! by a large amount"
+
+PB_Economy_Small_Progress_Increase_tt:0 "Our current §YLiteracy Level§! will begin to §Gimprove§! by a small amount"
+PB_Economy_Moderate_Progress_Increase_tt:0 "Our current §YLiteracy Level§! will begin to §Gimprove§! by a moderate amount"
+PB_Economy_Large_Progress_Increase_tt:0 "Our current §YLiteracy Level§! will begin to §Gimprove§! by a large amount"
+
+PB_Economy_Small_Progress_Increase_tt:0 "Our current §YEconomic Health§! will begin to §Gimprove§! by a small amount"
+PB_Economy_Moderate_Progress_Increase_tt:0 "Our current §YEconomic Health§! will begin to §Gimprove§! by a moderate amount"
+PB_Economy_Large_Progress_Increase_tt:0 "Our current §YEconomic Health§! will begin to §Gimprove§! by a large amount"
+
+PB_Economy_Small_Regression_tt:0 "Our current §YEconomic Health§! will begin to §Rworsen§! by a small amount"
+PB_Economy_Moderate_Regression_tt:0 "Our current §YEconomic Health§! will begin to §Rworsen§! by a moderate amount"
+PB_Economy_Large_Regression_tt:0 "Our current §YEconomic Health§! will begin to §Rworsen§! by a large amount"
+
+PB_MilitaryReform_Small_Progress_Increase_tt:0 "Our current §YMilitary Reform Rate§! will begin to §Gimprove§! by a small amount"
+PB_MilitaryReform_Moderate_Progress_Increase_tt:0 "Our current §YMilitary Reform Rate§! will begin to §Gimprove§! by a moderate amount"
+PB_MilitaryReform_Large_Progress_Increase_tt:0 "Our current §YMilitary Reform Rate§! will begin to §Gimprove§! by a large amount"
+
+PB_Westernization_Small_Progress_Increase_tt:0 "Our current §YWesternization Rate§! will begin to §Gimprove§! by a small amount"
+PB_Westernization_Moderate_Progress_Increase_tt:0 "Our current §YWesternization Rate§! will begin to §Gimprove§! by a moderate amount"
+PB_Westernization_Large_Progress_Increase_tt:0 "Our current §YWesternization Rate§! will begin to §Gimprove§! by a large amount"
+
 ##########################
 # SOCIAL DEVELOPMENT EVENTS
 ##########################
