--- a/localisation/PB_Turkey_l_english.yml
+++ b/localisation/PB_Turkey_l_english.yml
@@ -107,6 +107,9 @@
   PB_TUR_turkish_spring4:0 "The Turkish Spring"
   PB_TUR_turkish_spring5:0 "The Turkish Spring"
 
+  TUR_march_soldiers_idea:0 "March Soldiers"
+  TUR_we_fight_for_turkey_idea:0 "We Fight for Turkey"
+
   PB_TUR_Turkish_Civil_War_Recovery:0 "Recovering from the Civil War"
   TUR_five_year_plan_preperation_idea:0 "Five Year Plan Prepeation"
   TUR_five_year_plan_idea:0 "The Turkish Five Year Plan"
@@ -145,6 +148,26 @@
   TUR_with_golden_dagger:0 "With A Golden Dagger"
   TUR_calmer_instanbul:0 "A Calmer Instanbul"
   TUR_look_forward:0 "Looking Forward"
+  TUR_a_desperate_fight_no_more:0 "A Desperate Fight No More"
+  # Civil War Tree
+  TUR_the_turkish_civil_war:0 "The Turkish Civil War"
+  TUR_contacting_the_british:0 "Contacting The British"
+  TUR_request_further_support:0 "Request Furhter Support"
+  TUR_call_upon_the_people:0 "Call Upon the People"
+  TUR_march_soldiers:0 "March Soldiers"
+  TUR_a_puppet_king_no_more:0 "A Puppet King No More"
+  TUR_we_fight_for_turkey:0 "We Fight For Turkey!"
+  TUR_reactivate_the_defences:0 "Reactivate The Defences"
+  TUR_scavange_old_equipment:0 "Scavange Old Equipment"
+  TUR_mobolise_the_men:0 "Mobolise The Men"
+  TUR_ask_armenia_for_access:0 "Ask Armenia For Military Access"
+  TUR_time_is_of_the_essence:0 "Time is of the Essence"
+  TUR_steel_your_hearts:0 "Steel Your Hearts!"
+  TUR_work_for_turkey:0 "Work for Turkey"
+  TUR_onwards:0 "Onwards!"
+  TUR_the_search_for_fakhri_pasha:0 "The Search for Fakhri Pasha"
+  TUR_oh_honourable_fakhri:0 "Oh Honourable Fakhri"
+ 
   ##########################
   # EVENTS
   ##########################
@@ -188,12 +211,29 @@
   turkey.7.t:0 "The Separatists"
   turkey.7.a:0 "Your freedom will be temporary."
   turkey.8.t:0 "Kardeşler Savaşı"
-  turkey.8.d:0 "who could have though the collapse of order from the death of Izzet Pasah could have been so disastrous. With nationalist and Ottoman forces clashing over major cities, chaos erupted in the West as Jacobin and Bakuninist militias began mobilizing against both forces. Across the Empire, political violence has overthrown whatever semblance of calm that once existed. There can be no doubt at this point that Turkey is in the midst of full blown rebellion.\n\nThe fighting has come to be called Kardeşler Savaşı, or the Brother War, and it would be difficult to find a more apt name. As last remnants of the Ottoman Empire burn to the ground, the loyalists have been forced into the Northernmost provinces bordering the Black Sea. In the East, Armenian and Kurdish partisans are taking up positions to defend their homes in the coming conflict. In the West, Greece eyes the now vulnerable coast, their dreams of Megali tantalizingly close. Only incredible violence will determine the winner of this conflict, and whomever remains will be the kings of little more than corpses and ash."
+  turkey.8.d:0 "Who could have though the collapse of order from the death of Izzet Pasah could have been so disastrous. With nationalist and Ottoman forces clashing over major cities, chaos erupted in the West as Jacobin and Bakuninist militias began mobilizing against both forces. Across the Empire, political violence has overthrown whatever semblance of calm that once existed. There can be no doubt at this point that Turkey is in the midst of full blown rebellion.\n\nThe fighting has come to be called Kardeşler Savaşı, or the Brother War, and it would be difficult to find a more apt name. As last remnants of the Ottoman Empire burn to the ground, the loyalists have been forced into the Northernmost provinces bordering the Black Sea. In the East, Armenian and Kurdish partisans are taking up positions to defend their homes in the coming conflict. In the West, Greece eyes the now vulnerable coast, their dreams of Megali tantalizingly close. Only incredible violence will determine the winner of this conflict, and whomever remains will be the kings of little more than corpses and ash."
   turkey.8.a:0 "We shall endure!"
   turkey.8.b:0 "It is time we take back out destiny!"
   turkey.8.c:0 "For the people!"
-  turkey.9.a:0 "The Brothers War Begins"
+  turkey.9.t:0 "The Brothers War Begins."
   turkey.9.a:0 "To War!"
+  turkish_civilwar.0.t:0 "Kurdish Militia Join Us!"
+  turkish_civilwar.0.a:0 "Another step towards unification."
+  turkish_civilwar.1.t:0 "A Request From Turkey"
+  turkish_civilwar.1.a:0 "They shall receive."
+  turkish_civilwar.1.b:0 "It's best we stay out of this."
+  turkish_civilwar.2.t:0 "The British accept!"
+  turkish_civilwar.2.a:0 "A toast to our friends in the Isles!"
+  turkish_civilwar.3.t:0 "The British Decline"
+  turkish_civilwar.3.a:0 "Damn!"
+  turkish_civilwar.4.t:0 "A Second Request"
+  turkish_civilwar.4.a:0 "The fight for order is universial."
+  turkish_civilwar.4.b:0 "Not this time."
+  turkish_civilwar.5.t:0 "More Support From Britain"
+  turkish_civilwar.5.a:0 "This time success will be ours."
+  turkish_civilwar.6.t:0 "The British Decline"
+  turkish_civilwar.6.a:0 "Perhaps we pushed for too hard?"
+
 
   
   
@@ -210,6 +250,8 @@
   OTT_Turkish_Civil_War_tooltip:0 "§YYou will remain as the Ottoman Empire§!\n\n"
   NTR_Turkish_Civil_War_tooltip:0 "§YYou will switch to Nationalist Turkey§!\n\n"
   RTR_Turkish_Civil_War_tooltip:0 "§YYou will switch to Revolutionary Turkey§!\n\n"
+  TUR_a_puppet_king_no_more_tt:0 "§YThis will be a temporary measure, when this is over his powers will be diminished again§!"
+  TUR_reactivate_the_defences_tt:0 "§YDepending on how much of our original territory we still have will impact this descision§!"
 
   # DECISIONS STUFF
   TUR_slump_full:0 "§GOur Economy has fully recovered§!"
@@ -259,3 +301,4 @@
   ##########################
   TUR_izzet_dying_bro:0 " §RA Crisis is occuring§!"
   TUR_economy_fully_fixed:0 "§GThe Economy has been completly restored§!"
+  TUR_ENG_helped_us:0 "The Empire has helped us already"
