--- a/localisation/PB_Prussia_l_english.yml
+++ b/localisation/PB_Prussia_l_english.yml
@@ -475,6 +475,25 @@
   PRS_new_naval_minds:0 "New Naval Minds"
   PRS_expand_dockyard_facilities:0 "Expand Dockyard Facilities"
   PRS_air_formations:0 "Air Formations"
+  PRS_The_Brothers_War:0 "The Brothers War"
+  PRS_Fortress_Prussia:0 "Fortress Prussia"
+  PRS_Negotiate_With_The_Bear:0 "Negotiate With The Bear"
+  PRS_Exploit_New_Lands:0 "Exploit New Lands"
+  PRS_Begin_Prussianification:0 "Begin Prussianification"
+  PRS_Convert_Their_Industry:0 "Convert Their Industry"
+  PRS_Unity_Propaganda:0 "Unity Propaganda"
+  PRS_German_Scientists:0 "German Scientists"
+  PRS_Prussia_Triumphant:0 "Prussia Triumphant"
+  PRS_Proclaim_Greater_Prussia:0 "Proclaim Greater Prussia"
+  PRS_A_Rising_Power:0 "A Rising Power"
+  PRS_Utilize_German_Workers:0 "Utilize German Workers"
+  PRS_Support_The_Collaborationists:0 "Support The Collaborationists"
+  PRS_The_Eastern_Compromise:0 "The Eastern Compromise"
+  PRS_Prussia_Conquers_All:0 "Prussia Conquers All"
+  PRS_A_New_Capitol:0 "A New Capitol"
+  PRS_The_Silesia_Gambit:0 "The Silesia Gambit"
+  
+  
 
   ##########################
   # Ministers/Generals/Tech Teams
