--- a/localisation/PB_SCA_l_english.yml
+++ b/localisation/PB_SCA_l_english.yml
@@ -50,6 +50,8 @@
 
   PB_SCA_Maximum_Employment:0 "Maximum Employment"
 
+  PB_SCA_The_Red_Horde:0 "The Red Horde"
+
   ##########################
   # DECISIONS/MISSIONS/DEBUG
   ##########################
@@ -527,7 +529,9 @@
   SCA11tooltip:0 "\n§Y£decision_icon_small  Decisions unique to Oliver will become available after the Mid-Western Union is proclaimed.§!"
   SCA12tooltip:0 "\n§Y£decision_icon_small  Decisions unique to Butler will become available after the Mid-Western Union is proclaimed.§!"
   SCA13tooltip:0 "\n§Y£decision_icon_small  Decisions unique to Garden will become available after the Mid-Western Union is proclaimed.§!"
-  SCA14tooltip:0 "Sets the scenario up for the Mid-Western Union. This is for testing purposes so some shit might break or not work. Especially focuses that need flag."
+  SCA14tooltip:0 "Sets the scenario up for the Mid-Western Union. This is for testing purposes so some shit might break or not work. Especially focuses that need flags."
+  SCA15tooltip:0 "§RThe western shores of the North-American continent rest under the boot of a poisoned society. They may proclaim to be guardians of the working man but we can smell the shit from under their breath, so I ask of you comrades to march west, where the dead will march with us.§!"
+  SCA16tooltip:0 "§YLevel two forts will be built in all major cities in our owned territories.§!"
 
   All_Thats_Left:0 "The Last Wave Has Arrived"
   SCA_LAK_WAR_OVER:0 "The Northern Threat Has Been Dealt With"
@@ -563,8 +567,8 @@
 
   SCA1title:0 "The Dead March West"
   SCA1desc:0 "The roads that many followed laid high in viscous mixtures of blood and dirt with the occasional sight of a corpse becoming the permanent spectacle for the trek. Once dawn came eveyone prepared themselves to once again follow the dirt road left by the failed settlers of the old America. For those who were too weak to continue walking their fate was not so prestigious. They became yet another figure on an already increasing list of "who was dead". It was a blindly sight to see sons beg for their fathers to get up, and the age divide only worsened with much of the old laying claim to heaven, or hell. Amongst the red skies festered disease, rampant starvation, and a total dissaray of society. From three hundred thousand of the intial pilgrims only an estimated one hundred thousand survived. If the commonwealth so wished to chase after us then they would have all the directions needed. It seemed Hansel and Gretel ran out of bread, but not bodies, that they had plenty of. Even when Butler proclaimed our new home all one had to do was turn and look at those damn dirt roads to be reminded of what happened. \n\nOur sons who sacrificed so much will have their revenge, or at the very least bathe in the blood of their brothers.\n\nDeath To The Commonwealth!" 
-  SCA1opta:0 "Good, Fuck Of"
-  SCA1optb:0 "Wait Let Me Come To"
+  SCA1opta:0 "Good, Fuck Off"
+  SCA1optb:0 "Wait Let Me Come Too"
   SCA2title:0 "The First Wave"
   SCA2desc:0 "The convoy reared to a closure, behind followed a huge line of hungry and tired peoples. The food situation had already begun deteriorating at this point and rationing had already taken effect. The streets were battered with sand and the definition of hell seemed all to fitting for the situation at hand. The local militias while not uttering a word of hesitance were all to knowledge about the current circumstances. They remained the only people able to still maintain a full belly, them and the various political leaders. Even the veterans were on the short end of the stick. The new Butlerites began being set new homes and rations and the core population looked towards them with distaste and concern. The worst had just begun. " 
   SCA2opta:0 "Brace Yourselfs"
