--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -292,6 +292,10 @@
   PBNews.73.d:0 ""
   PBNews.73.a:0 "The People take their fate with firm hands."
 
+  PBNews.74.t:0 "GREATER PRUSSIA PROCLAIMED!"
+  PBNews.74.d:0 ""
+  PBNews.74.a:0 "The Young Have Replaced The Old"
+
 
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
