--- a/localisation/PB_Prussia_l_english.yml
+++ b/localisation/PB_Prussia_l_english.yml
@@ -76,6 +76,8 @@
   PB_Renewed_Economy:0 "Renewed Economy"
   PB_Slavage_Campaigns:0 "Slavage Campaigns"
   PB_Government_Investments:0 "Government Investments"
+  PB_Living_Under_Germanys_Shadow:0 "Living Under Germany's Shadow"
+  PB_Living_Under_Germanys_Shadow_desc:0 "Prussia has remained for much of it's history as the "little brother" to the once then prestigious Austrian Empire, being seen as the less incapable nation of the two and always being two steps behind in terms of industrial capability and societal development. This has remained true for most of modern history, becoming more apparent with the Empire effectively becoming the European hegemony post Great War. Though Europe is a far different place, the circumstances that allowed the Austrians to grow cannot be replicated in todays climate. Alternative options such as Neo-Imperialism are the only choice if one seeks to expand, an option not open to the United Kingdoms Of Germany."
 
   ##########################
   # DECISIONS
@@ -101,7 +103,7 @@
   PRS_put_them_to_work:0 "Put Them To Work"
   PRS_put_them_to_work_desc:0 "We must put the unemployed and needy to work."
   PRS_highway_expansions:0 "Highway Expansions"
-  PRS_highway_expansions_desc:0 "New roads mean new eras open to construction."
+  PRS_highway_expansions_desc:0 "New roads mean new areas open to construction."
   PRS_the_posen_research_complex:0 "The Posen Research Complex"
   PRS_the_posen_research_complex_desc:0 "Our greatest stain is our stupidity."
   PB_PRS_Plan_Eden:0 "Plan Eden"
@@ -160,6 +162,8 @@
   ##########################
   # TOOLTIPS/FLAGS
   ##########################
+
+  PRS_Greater_Prussia:0 "Greater Prussia"
  
   prussia1tooltip:0 "\n§YUnlocks§! £decision_icon_small Decisions to manually effect who we align ourselves with"
   prussia2tooltip:0 "Increases §YGerman§! Influence by §O3§!"
@@ -176,8 +180,7 @@
   prussia13tooltip:0 "You will gain three §GBasic§! infantry divisions." 
   prussia14tooltip:0 "A union will form between §LPrussia§! and §YGermany§!\n\n§R-This Will Result In Annexation-§!"
   prussia15tooltip:0 "We will become a §ODominion§! under §YGermany§!"
-  PRS_BLACK_MONTH_HITS:0 "§gBlack Month Has Hit Prussia§!"
-  PRS_POL_IND:0 "§gThe Polish War Of Independence Has Happened§!"
+  PRS_German_Defeat:0 "§YGermany Has Been Defeated§!"
   prussia16tooltip:0 "§LPrussia§! [PRS.GetFlag] will side with §CRussia§! [RUS.GetFlag]\n\n"
   prussia17tooltip:0 "We will become a §ODominion§! under §CRussia§!"
   prussia18tooltip:0 "A series of §YForts§! will be built along the western side of §LPrussia§!."
@@ -187,10 +190,10 @@
   prussia22tooltip:0 "The effects of the §YStock Crisis§! will be §GRemoved§!.\n\n"
   prussia23tooltip:0 "\nIf France agrees we will claim to be the true §ROrder§! of §gGermany§!!"
   prussia24tooltip:0 "£decision_influence_small  The §CDanzig Conference§! will begin and various decisions must be made on Prussia's future and who will rule the Fatherland alongside Bouhler\n§W--------------------------------------------------------------§!\nThis will be done through various §YEvents§!\n§W--------------------------------------------------------------§!\nThe options for our §YHead Of Government§! are:\n\n§YManteuffel§! -  £GFX_prod_eff_cap   Will set Prussia down a path of economic prosperity\n\n§YSchmidt§! -  £GFX_going_to_combat   Will crush the German menace at any cost\n\n§YHalder§! -  £GFX_manpower_texticon   Will expand the army and create a militaristic state\n\n§YBouhler§! -  £GFX_pol_power   Will promote the ideals of Neo-Imperalism\n§W--------------------------------------------------------------§!"
-  prussia25tooltip:0 "Bouhler will remain soul ruler of Prussia\n§W--------------------------------------------------------------§!\nNew £decision_icon_small '§YDecisions§!' will unlock for Bouhler\n§W--------------------------------------------------------------§!"
-  prussia26tooltip:0 "Manteuffel will rule coincide with Bouhler\n§W--------------------------------------------------------------§!\nNew £decision_icon_small  '§YDecisions§!' will unlock for Manteuffel\n§W--------------------------------------------------------------§!"
-  prussia27tooltip:0 "Halder will rule coincide with Bouhler\n§W--------------------------------------------------------------§!\nNew £decision_icon_small  '§YDecisions§!' will unlock for Halder\n§W--------------------------------------------------------------§!"
-  prussia28tooltip:0 "Schimdt will rule coincide with Bouhler\n§W--------------------------------------------------------------§!\nNew £decision_icon_small  '§YDecisions§!' will unlock for Schimdt\n§W--------------------------------------------------------------§!"
+  prussia25tooltip:0 "Bouhler will remain soul ruler of Prussia\n§W--------------------------------------------------------------§!"
+  prussia26tooltip:0 "Manteuffel will rule coincide with Bouhler\n§W--------------------------------------------------------------§!"
+  prussia27tooltip:0 "Halder will rule coincide with Bouhler\n§W--------------------------------------------------------------§!"
+  prussia28tooltip:0 "Schimdt will rule coincide with Bouhler\n§W--------------------------------------------------------------§!"
   prussia29tooltip:0 "§W--------------------------------------------------------------§!\nPrussia will review its current internal issues based around day-to-day life and act accordingly with the conferences protocols"
   prussia30tooltip:0 "§W--------------------------------------------------------------§!\nPrussia will review its current internal issues based around the military and act accordingly with the conferences protocols"
   prussia31tooltip:0 "§W--------------------------------------------------------------§!\nPrussia will review its current internal issues based around culture and act accordingly with the conferences protocols"
@@ -204,6 +207,8 @@
   PRS_Fred_tt:0 "Adds one production line of the Fredrick Class Super Heavy Battleship at 100% completion at the end of the mission timeout\n\nIf you do not have man the guns you will instead instantly research super heavy battleships" 
   prussia36tooltip:0 "One Völker Werden brigade will be raised"
   prussia37tooltip:0 "The §RFour Horsemen of the Apocalypse§! shall haunt the skies\n§W--------------------------------------------------------------§!\n"
+  prussia38tooltip:0 "§YIndependent State Of Prussia§! will be know as §YGreater Prussia§!" 
+  prussia39tooltip:0 "§YTwo German collaborationist divisions will be raised§!"
 
   ##########################
   # EVENTS
@@ -475,7 +480,7 @@
   PRS_new_naval_minds:0 "New Naval Minds"
   PRS_expand_dockyard_facilities:0 "Expand Dockyard Facilities"
   PRS_air_formations:0 "Air Formations"
-  PRS_The_Brothers_War:0 "The Brothers War"
+  PRS_The_Brothers_War:0 "Victor Of The Brothers War"
   PRS_Fortress_Prussia:0 "Fortress Prussia"
   PRS_Negotiate_With_The_Bear:0 "Negotiate With The Bear"
   PRS_Exploit_New_Lands:0 "Exploit New Lands"
@@ -490,17 +495,15 @@
   PRS_Support_The_Collaborationists:0 "Support The Collaborationists"
   PRS_The_Eastern_Compromise:0 "The Eastern Compromise"
   PRS_Prussia_Conquers_All:0 "Prussia Conquers All"
-  PRS_A_New_Capitol:0 "A New Capitol"
+  PRS_A_New_Capitol:0 "A New Capital"
   PRS_The_Silesia_Gambit:0 "The Silesia Gambit"
   
-  
-
   ##########################
   # Ministers/Generals/Tech Teams
   ##########################
 
-  PRS_Martin_Bormann:0 "Albert Bormann"  ##Fuck the english language##
-  PRS_Martin_Bormann_desc:0 "Just like §YPhilipp Bouhler§!, §Ylbert Bormann§! was once a devote supporter of the short lived Prussian Republic though as political tensions rose and economic suffering became more severe the §gVaterland Front§! promised Mr Bormann something no other party at the time could. A job and a future."
+  PRS_Martin_Bormann:0 "Albert Bormann"  ##Fuck the english language## - Yes i know it reads Martin Bormann for the code, and yes I can't be fucked fixing it
+  PRS_Martin_Bormann_desc:0 "Just like §YPhilipp Bouhler§!, §YAlbert Bormann§! was once a devote supporter of the short lived Prussian Republic though as political tensions rose and economic suffering became more severe the §gVaterland Front§! promised Mr Bormann something no other party at the time could. A job and a future."
   PRS_Herbet_Backe:0 "Herbet Backe"
   PRS_Herbet_Backe_desc:0 "The most loyal follower of §YPhilipp Bouhler§!, §YHerbet Backe§! served in the same russian cavalry unit. Directly hearing Mr Bouhler's inspirational words. He is regarded as a loyal dog by both his contemporaries and political enemies."
   PRS_Victor_Brack:0 "Victor Brack"
